--- a/day-03-khan/khan.html
+++ b/day-03-khan/khan.html
@@ -52,8 +52,21 @@
 
         </div>
 
-      </section>
 
+      </section>
+      <section class="recent-activity">
+        <h2> Recent Activity</h2>
+
+        <div class="activity-item">
+        <div class="left-column">Quiz:Simple CSS selectors</div><div class="right-column">4 problems</div>
+      </div>
+
+
+      <div class="activity-item">
+        <div class="left-column">Challenge:Seasonal ids</div><div class="right-column">1 minute 1500 points earned</div>
+      </div>
+
+      </section>
     </div>
   </body>
 
