finally done...I hope

--- a/day03-position/positioning.html
+++ b/day03-position/positioning.html
@@ -14,21 +14,20 @@
      <h2>CSS</h2>
      <div class="list">
      <ul>
-       <li>Containing Floats</li>
-       <li>Position Property</li>
-       <li>Z-Index Property</li>
+       <li><div class="list-item"><span class="list-text">Containing Floats</span></div></li>
+       <li><div class="list-item"><span class="list-text">Position Property</span></div></li>
+       <li><div class="list-item"><span class="list-text">Z-Index Property</span></div></li>
      </ul>
       </div>
      <h2>SHARE</h2>
-
      <img class="twit" src="twitter.jpeg" width="100">
      <img class="fb" src="fblogo.jpeg" width="100">
      <img class="goog" src="g+.jpeg" width="75">
+     <div class="circle">
+       2
+     </div>
 
    </div>
 
-  <div class="circle">
-    2
-  </div>
  </body>
 </html>
