--- a/day-09-inputs/input.html
+++ b/day-09-inputs/input.html
@@ -14,9 +14,9 @@
     <form action="get-user-login.php" method="POST"/>
 
       <label for="first-name">First name</label>
-      <input type="first-name" placeholder="first name"/>
+      <input type="text" placeholder="first name"/>
       <label for="first-name">Last name</label>
-      <input type="last-name" placeholder="last name"/>
+      <input type="text" placeholder="last name"/>
 
       <input type="submit" value="Submit!"/>
 
