--- a/day-09-simple-dom-js/index.html
+++ b/day-09-simple-dom-js/index.html
@@ -53,7 +53,7 @@
       <li>Steak</li>
       <li>Wings</li>
       <li>Shrimp</li>
-      <li>Sandwick</li>
+      <li>Sandwich</li>
     </ul>
   </div>
 
