--- a/day-13-gmail-menu-toggle/gmail.html
+++ b/day-13-gmail-menu-toggle/gmail.html
@@ -11,7 +11,7 @@
         <div class="container">
           <h1>COMPOSE</h1>
 
-          <ul id="list">
+          <ul id="the-list">
             <li>Inbox</li>
             <li>Starred</li>
             <li>Important</li>
