max guesses added

--- a/day-17-guess-the-number/index.html
+++ b/day-17-guess-the-number/index.html
@@ -12,7 +12,7 @@
     <div class="container">
 
       <header >
-        <h1>Guess What Number I'm Thinking</h1>
+        <h1>Guess What Number I Be Ponderin'</h1>
       </header>
 
       <div>
@@ -20,7 +20,7 @@
       </div>
 
       <div>
-        <button id="button">GUESS AGAIN</button>
+        <button id="button">GUESS</button>
       </div>
 
       <div>
