--- a/day-06-js-fun-02/index.html
+++ b/day-06-js-fun-02/index.html
@@ -4,12 +4,15 @@
   <title>Javascript fun!</title>
 </head>
 <body>
-  <p>Page 2!</p>
+  <p>Converted to jQuery</p>
 
   <ul id="the-list">
     </ul>
 
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
   <script src="script.js"></script>
+
+
 </body>
 
 
