--- a/day-09-change-text-on-click/changetext.html
+++ b/day-09-change-text-on-click/changetext.html
@@ -9,9 +9,30 @@
 
   <body>
 
-    <p class="the-paragraph">Click me</p>
+    <p class="paragraph">Click me</p>
 
-    <script src="changetext.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+    <script src="practice.js"></script>
   </body>
 
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- var changeText = $('.paragraph');
+
+function toggleText(){
+  changeText.text('humina, humina, humina');
+}
+
+
+changeText.on('click',  toggleText); -->
