--- a/day-11-build-a-simple-list/buildlist.html
+++ b/day-11-build-a-simple-list/buildlist.html
@@ -15,7 +15,9 @@
 
     </ol>
 
-    <script src="build.js"></script>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+    <script src="practice.js"></script>
   </body>
 
 </html>
