--- a/day-11-house-property-object/build.html
+++ b/day-11-house-property-object/build.html
@@ -21,8 +21,8 @@
 
 
       </div>
-
-      <script src="build.js"></script>
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+      <script src="practice.js"></script>
     </body>
 
 </html>
