--- a/day-10-multi-toggle-on-click/multi-toggle.html
+++ b/day-10-multi-toggle-on-click/multi-toggle.html
@@ -30,8 +30,8 @@
       </style>
 
 
-
-      <script src="multitog.js"></script>
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+      <script src="practice.js"></script>
     </body>
 
 </html>
