--- a/day-26-templating-practice/index.html
+++ b/day-26-templating-practice/index.html
@@ -9,15 +9,21 @@
     </head>
     <body>
 
+      <div id="list-of-stocks">
+      </div>
 
+      <script type="text/html" id="stockPrice">
+        <div class="border">
+          <p class="name"><%= name %></p>
+          <p class="symbol"><%= symbol %></p>
+          <p class="price">$<%= price %></p>
+        </div>
+      </script>
 
-
-
-
-
+      <script src="https://cdn.jsdelivr.net/lodash/4.15.0/lodash.min.js"></script>
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
       <script src="script.js"></script>
-      <script>AppName.start();</script>
+      <script>Templating.start();</script>
     </body>
 
 </html>
