--- a/day-20-ovenbits-hovers/index.html
+++ b/day-20-ovenbits-hovers/index.html
@@ -9,6 +9,7 @@
     </head>
     <body>
       <div class="container">
+
           <div class="frame1",
           style="background-image: url(http://d36s929gmfcqwt.cloudfront.net/assets/cellucor-900-f5184e18ba82098b3fb785136068ea366452d8255e6f7d3ae12f081511ace1a3.jpg)">
             <div class="tint">
@@ -25,6 +26,7 @@
               </div>
             </div>
           </div>
+
           <div class="frame2", style="background-image: url(http://d36s929gmfcqwt.cloudfront.net/assets/over-900-53c527bebb017cd9c1700ffc2b20a6cc57826bfae40ecb75f62b78d88163a5aa.jpg)">
             <div class="tint">
               <div ="text-group">
@@ -40,14 +42,15 @@
               </div>
             </div>
           </div>
+
           <div class="frame3", style="background-image: url(http://d36s929gmfcqwt.cloudfront.net/assets/bts-900-3f97cb6396ffc3afb67dce1fd5545709254b2ffdd261dd9106b57327d8d158e0.jpg)">
-            <div class="tint">
-              <div ="text-group">
+            <div ="text-group">
+              <div class="tint">
                 <div class="main-text">
                   Beyond the Show
                 </div>
                 <p>
-                  A cross-platform Q&A portal and educational experience.
+                  A cross-platform Q&amp;A portal and educational experience.
                 </p>
                 <button class="case-study">
                     VIEW CASE STUDY
@@ -55,11 +58,10 @@
               </div>
             </div>
           </div>
+
       </div>
 
 
-      <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-      <script src="script.js"></script> -->
     </body>
 
 </html>
