--- a/day-20-ovenbits-hovers/index.html
+++ b/day-20-ovenbits-hovers/index.html
@@ -13,7 +13,7 @@
           <div class="frame1",
           style="background-image: url(http://d36s929gmfcqwt.cloudfront.net/assets/cellucor-900-f5184e18ba82098b3fb785136068ea366452d8255e6f7d3ae12f081511ace1a3.jpg)">
             <div class="tint">
-              <div ="text-group">
+              <div class="text-group">
                 <div class="main-text">
                   Cellucor
                 </div>
@@ -29,7 +29,7 @@
 
           <div class="frame2", style="background-image: url(http://d36s929gmfcqwt.cloudfront.net/assets/over-900-53c527bebb017cd9c1700ffc2b20a6cc57826bfae40ecb75f62b78d88163a5aa.jpg)">
             <div class="tint">
-              <div ="text-group">
+              <div class="text-group">
                   <div class="main-text">
                     Over
                   </div>
@@ -44,8 +44,8 @@
           </div>
 
           <div class="frame3", style="background-image: url(http://d36s929gmfcqwt.cloudfront.net/assets/bts-900-3f97cb6396ffc3afb67dce1fd5545709254b2ffdd261dd9106b57327d8d158e0.jpg)">
-            <div ="text-group">
-              <div class="tint">
+            <div class="tint">
+              <div class="text-group">
                 <div class="main-text">
                   Beyond the Show
                 </div>
