--- a/day-15-simple-to-do-list/index.html
+++ b/day-15-simple-to-do-list/index.html
@@ -18,8 +18,9 @@
       </ol>
 
     </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 
-    <script src="script.js"></script>
+    <script src="practice.js"></script>
   </body>
 
 </html>
